--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.11.4",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
     "postcss": "^8",
