--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.8",
+    "firebase": "^10.14.0",
     "framer-motion": "^11.11.4",
     "next": "^14.2.14",
     "react": "^18.3.1",
