--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@reduxjs/toolkit": "^2.2.8",
     "axios": "^1.7.7",
     "firebase": "^10.14.0",
-    "framer-motion": "^11.11.4",
+    "framer-motion": "^11.11.7",
+    "lottie-react": "^2.4.0",
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@types/react": "^18.3.11",
