--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^14.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
